# CCDA_OMOP_Conversion_Package

./: .buildinfo  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  architecture.html  field_types.html  genindex.html  gradle.properties  index.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  pyproject.toml.template  requirements.txt  run_unittests.sh  search.html  searchindex.js  templateConfig.json
.doctrees/: architecture.doctree  field_types.doctree  index.doctree  overview.doctree
_modules/: index.html
_sources/: architecture.rst.txt  field_types.rst.txt  index.rst.txt  overview.rst.txt
api/: ccda_to_omop.code_hunt.html  ccda_to_omop.constants.html  ccda_to_omop.data_driven_parse.html  ccda_to_omop.ddl.html  ccda_to_omop.domain_dataframe_column_types.html  ccda_to_omop.find_paths.html  ccda_to_omop.html  ccda_to_omop.layer_datasets.html  ccda_to_omop.load_duck_db.html  ccda_to_omop.package_constant_access.html  ccda_to_omop.util.html  ccda_to_omop.value_transformations.html  ccda_to_omop.visit_reconciliation.html  modules.html
docs/: architecture.rst  conf.py  gen_metadata_docs.py  index.rst
metadata/: Care_Site_ee.html  Care_Site_pr.html  Condition.html  DEVICE_from_act_observation_playingEntity.html  DEVICE_from_medications_consumable.html  DEVICE_from_medications_nested_substanceAdministration.html  DEVICE_from_medications_substance_administration.html  DEVICE_from_medications_supply.html  DEVICE_from_procedures.html  Device_organizer_procedure.html  Device_organizer_supply.html  Device_procedure.html  Device_supply.html  (+40 more)
(+893 files in other folders)
